--- a/Solutions/Chapter 2.ipynb
+++ b/Solutions/Chapter 2.ipynb
@@ -122,12 +122,12 @@
     "\n",
     "def sample(num_samples):\n",
     "    '''\n",
-    "    Returns a sample with 'num_samples' instances.\n",
+    "    Returns a sample with 'num_samples' instances with noise.\n",
     "    '''\n",
     "    x = np.linspace(0, 4.5, num_samples)\n",
     "    y = 2 * np.sin(x * 1.5) + pl.randn(x.size)\n",
     "    return x, y\n",
-    "    \n",
+    "\n",
     "x_ideal, y_ideal = f(50)\n",
     "x, y = sample(50)\n",
     "\n",
@@ -352,13 +352,13 @@
     "        y_avg = y_avg + y_pred\n",
     "        y_preds.append(y_pred)\n",
     "    y_avg = y_avg / n_models\n",
-    "    \n",
+    "\n",
     "    bias = y_avg - y_ideal\n",
     "    variance = 0\n",
     "    for y_pred in y_preds:\n",
     "        variance += np.square(y_avg - y_pred)\n",
     "    variance /= n_models\n",
-    "    \n",
+    "\n",
     "    bias_vals.append(np.mean(np.square(bias)))\n",
     "    var_vals.append(np.mean(variance))\n",
     "    sum_of_bias_var_vals.append(np.mean(np.square(bias) + variance))\n",
@@ -451,7 +451,7 @@
     "\n",
     "def sample(num_samples):\n",
     "    '''\n",
-    "    Returns a sample with 'num_samples' instances without noise.\n",
+    "    Returns a sample with 'num_samples' instances with noise.\n",
     "    '''\n",
     "    x = np.linspace(-2, 2, num_samples)\n",
     "    y = 5 * np.power(x, 5) + 20*pl.randn(x.size)\n",
@@ -481,7 +481,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# Repeat the sampling and fitting process for degrees 1,2, ... , 10 (100 times per each degree), \n",
+    "# Repeat the sampling and fitting process for degrees 1,2, ... , 10 (100 times per each degree),\n",
     "# and plot the bias and the variance values of the fitted models\n",
     "\n",
     "n_models = 100\n",
@@ -502,13 +502,13 @@
     "        y_avg = y_avg + y_pred\n",
     "        y_preds.append(y_pred)\n",
     "    y_avg = y_avg / n_models\n",
-    "    \n",
+    "\n",
     "    bias = y_avg - y_ideal\n",
     "    variance = 0\n",
     "    for y_pred in y_preds:\n",
     "        variance += np.square(y_avg - y_pred)\n",
     "    variance /= n_models\n",
-    "    \n",
+    "\n",
     "    bias_vals.append(np.mean(np.square(bias)))\n",
     "    var_vals.append(np.mean(variance))\n",
     "    sum_of_bias_var_vals.append(np.mean(np.square(bias) + variance))\n",
@@ -846,7 +846,7 @@
     "        plt.plot(x_sample[0], x_sample[1], 'bx', label=y_sample)\n",
     "    else:\n",
     "        raise ValueError('Wrong label: {}'.format(y_sample))\n",
-    "        \n",
+    "\n",
     "handles, labels = plt.gca().get_legend_handles_labels()\n",
     "by_label = dict(zip(labels, handles))\n",
     "plt.legend(by_label.values(), by_label.keys())\n",
@@ -923,7 +923,7 @@
     "\n",
     "# Calculate distances with each training samples\n",
     "distance = [np.sum(np.abs(x - x_sample)) for x in X_train]\n",
-    "    \n",
+    "\n",
     "# Find K nearest neighbors\n",
     "K = 5\n",
     "neighbors_idx = np.argsort(distance)[:K]\n",
@@ -946,7 +946,7 @@
     "        plt.plot(X_train[i][0], X_train[i][1], 'gx', label = 'running')\n",
     "    else:\n",
     "        plt.plot(X_train[i][0], X_train[i][1], 'bx', label = 'standing')\n",
-    "        \n",
+    "\n",
     "plt.plot(X_test[idx][0], X_test[idx][1], 'k.', label = 'test sample (predicted as {})'.format(y_pred))\n",
     "handles, labels = plt.gca().get_legend_handles_labels()\n",
     "by_label = dict(zip(labels, handles))\n",
